--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,9 @@ plugins {
 
 group = 'com.nttdata.ecommerce'
 version = '0.0.1-SNAPSHOT'
-compileJava {
-   sourceCompatibility = 14
-   targetCompatibility = 14
-   options.compilerArgs += ['-parameters', '-g']
-}
+
+targetCompatibility = 14
+
 
 configurations {
 	compileOnly {
@@ -28,9 +26,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation "io.springfox:springfox-swagger2:2.9.2"
     implementation "io.springfox:springfox-swagger-ui:2.9.2"
-	
-	
-	
+	compile 'org.springframework.boot:spring-boot-starter-amqp:2.2.6.RELEASE'
+
+
+
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
